--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
             <input type="text" id="inputUsername" class="fadeIn second" name="login" placeholder="API Username">
             <input type="text" id="inputPassword" class="fadeIn third" name="login" placeholder="API Password">
             <input type="submit" class="fadeIn fourth" value="Log In">
-            <p class="mt-5 mb-3 text-muted text-center">&copy; FastSpring</p>
+            <p class="text-muted text-center">&copy; FastSpring</p>
          </form>
 
          <div id="formFooter">
