--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -11,7 +11,7 @@ body {
 }
 
 a {
-  color: #92badd;
+  color: #5abaec;
   display:inline-block;
   text-decoration: none;
   font-weight: 400;
@@ -23,7 +23,7 @@ h2 {
   font-weight: 600;
   text-transform: uppercase;
   display:inline-block;
-  margin: 40px 8px 10px 8px; 
+  margin: 40px 8px 10px 8px;
   color: #cccccc;
 }
 
