--- a/templates/login.html
+++ b/templates/login.html
@@ -55,7 +55,7 @@
                         console.log(token);
 
                         // Redirect to user portal
-                        //window.location.href = `/portal/${accountId}/overview.html`;
+                        window.location.href = `/overview.html`;
                     } else {
                         alert(resLogin.error);
                     }
