--- a/templates/login.html
+++ b/templates/login.html
@@ -49,13 +49,13 @@
             $.post(`${window.location.origin}/login`, payload)
                 .done((resLogin) => {
                     if (resLogin && resLogin.success) {
-                        const { token } = resLogin;
+                        const { portalId, token } = resLogin;
                         // Store private token in local storage
                         sessionStorage.setItem('FS-token', JSON.stringify(token));
                         console.log(token);
-
+                        console.log(portalId);
                         // Redirect to user portal
-                        window.location.href = `/overview.html`;
+                        window.location.href = `/${portalId}/overview.html`;
                     } else {
                         alert(resLogin.error);
                     }
