--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -45,7 +45,7 @@ h2 {
   -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
   background: #fff;
-  padding: 30px;
+  padding-top: 30px;
   width: 90%;
   max-width: 450px;
   position: relative;
