--- a/templates/portal.html
+++ b/templates/portal.html
@@ -18,10 +18,14 @@
 
   <body>
     <nav class="navbar navbar-dark bg-dark">
-        <button id="fs-logout" data-toggle="tooltip" data-placement="bottom" title="Logout" data-original-title="Logout" class="navbar-toggler" type="button" onclick="logout()">
-            <i class="fa fa-sign-out customBlue" style="cursor:pointer">
-            </i>
-        </button>
+      <a class="navbar-brand" href="#">
+        <img src="/images/Navbar-logo_white-short.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        FastSpring
+      </a>
+      <button id="fs-logout" data-toggle="tooltip" data-placement="bottom" title="Logout" data-original-title="Logout" class="navbar-toggler" type="button" onclick="logout()">
+          <i class="fa fa-sign-out customBlue" style="cursor:pointer">
+          </i>
+      </button>
     </nav>
 
 
