--- a/templates/portal.html
+++ b/templates/portal.html
@@ -19,7 +19,7 @@
   <body>
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="#">
-        <img src="/images/Navbar-logo_white-short.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="/images/Navbar-logo_white-short.png" width="15px" height="30px" class="d-inline-block align-top" alt="">
         FastSpring
       </a>
       <button id="fs-logout" data-toggle="tooltip" data-placement="bottom" title="Logout" data-original-title="Logout" class="navbar-toggler" type="button" onclick="logout()">
