--- a/templates/portal.html
+++ b/templates/portal.html
@@ -12,7 +12,8 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href='/styles/custom.css'>
     <!-- Custom functions -->
-    <script type="text/javascript" src="/js/utils/common.js"> </script>
+    <script type="text/javascript" src="/js/utils/common.js"></script>
+    <script type="text/javascript" src="/js/redners/portal.js"></script>
 
   </head>
 
