--- a/templates/portal.html
+++ b/templates/portal.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href='/styles/custom.css'>
     <!-- Custom functions -->
     <script type="text/javascript" src="/js/utils/common.js"></script>
-    <script type="text/javascript" src="/js/redners/portal.js"></script>
+    <script type="text/javascript" src="/js/renders/portal.js"></script>
 
   </head>
 
