--- a/templates/portal.html
+++ b/templates/portal.html
@@ -49,12 +49,12 @@
             $.post(`${window.location.origin}/getPortalDetails`, { token })
                 .done((resPortal) => {
                     if (resPortal && resPortal.success) {
-                        const productsElement = resPortal.products.length > 0 ?
+                        /*const productsElement = resPortal.products.length > 0 ?
                             renderProductsTable(resPortal.products)
                             :
                             renderNoProducts(resPortal.products);
                         ;
-                        $('#products-container').append([productsElement]);
+                        $('#products-container').append([productsElement]);*/
                         console.log(resPortal.products);
                     } else {
                         forceLogout(resPortal.error);
