--- a/templates/portal.html
+++ b/templates/portal.html
@@ -31,9 +31,9 @@
 
     <div class="container-color d-flex w-100 h-100 mx-auto flex-column">
         <main role="main" class="container">
-            <div id="loading-spinner" class="spinner-border pageLoader" role="status">
+            <!--<div id="loading-spinner" class="spinner-border pageLoader" role="status">
                 <span class="sr-only">Loading...</span>
-            </div>
+            </div>-->
             <div id='products-container' class='card container'>
                 <!-- Content will be populated here -->
             </div>
