--- a/templates/portal.html
+++ b/templates/portal.html
@@ -50,6 +50,7 @@
                 .done((resPortal) => {
                     if (resPortal && resPortal.success) {
                         console.log(resPortal.products);
+                        console.log(resPortal.products.[1].pricing.quantityDiscounts)
                         const productsElement = resPortal.products.length > 0 ?
                             renderProductsTable(resPortal.products)
                             :
