--- a/templates/portal.html
+++ b/templates/portal.html
@@ -50,7 +50,7 @@
                 .done((resPortal) => {
                     if (resPortal && resPortal.success) {
                         console.log(resPortal.products);
-                        debugger;
+                        //debugger;
                         const productsElement = resPortal.products.length > 0 ?
                             renderProductsTable(resPortal.products)
                             :
