--- a/templates/portal.html
+++ b/templates/portal.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
     <!-- Custom styles -->
     <link rel="stylesheet" href='/styles/custom.css'>
     <!-- Custom functions -->
     <script type="text/javascript" src="/js/utils/common.js"></script>
+    <script type="text/javascript" src="/js/utils/form.js"></script>
     <script type="text/javascript" src="/js/renders/portal.js"></script>
 
   </head>
@@ -34,6 +37,46 @@
             <!--<div id="loading-spinner" class="spinner-border pageLoader" role="status">
                 <span class="sr-only">Loading...</span>
             </div>-->
+            <form>
+              <div class="form-group">
+                <div class="input-group mb-3">
+                  <input class="form-control" id="pcntOff" placeholder="20" type="text" >
+                  <span class="input-group-text">% for </span>
+                  <select class="form-select" id="prodQty">
+                    <option selected>Choose...</option>
+                    <option value="1">1 or more </option>
+                    <option value="2">2 or more</option>
+                    <option value="3">3 or more</option>
+                    <option value="4">4 or more</option>
+                    <option value="5">5 or more</option>
+                    <option value="6">6 or more</option>
+                    <option value="7">7 or more</option>
+                    <option value="8">8 or more</option>
+                    <option value="9">9 or more</option>
+                    <option value="10">10 or more</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label" for="dateStart">From</label>
+                <input class="form-control" id="dateStart" name="date" placeholder="MM/DD/YYY" type="text"/>
+                <label class="control-label" for="dateEnd">To</label>
+                <input class="form-control" id="dateEnd" name="date" placeholder="MM/DD/YYY" type="text"/>
+              </div>
+              <div class="form-group">
+                <label class="control-label " for="discReason">
+                  Discount Reason
+                </label>
+                <input class="form-control" id="discReason" name="text" type="text"/>
+              </div>
+              <div class="form-group">
+                <div>
+                  <button class="btn btn-primary " name="submit" type="submit" onclick="testPrint()">
+                    Submit
+                  </button>
+                </div>
+              </div>
+            </form>
             <div id='products-container' class='card container'>
                 <!-- Content will be populated here -->
             </div>
@@ -51,12 +94,14 @@
                     if (resPortal && resPortal.success) {
                         console.log(resPortal.products);
                         //debugger;
-                        const productsElement = resPortal.products.length > 0 ?
+                        //Call intial form not products table
+                        renderUpdateForm();
+                        /*const productsElement = resPortal.products.length > 0 ?
                             renderProductsTable(resPortal.products)
                             :
                             renderNoProducts(resPortal.products);
                         ;
-                        $('#products-container').append([productsElement]);
+                        $('#products-container').append([productsElement]);*/
                     } else {
                         forceLogout(resPortal.error);
                     }
