--- a/templates/portal.html
+++ b/templates/portal.html
@@ -37,46 +37,48 @@
             <!--<div id="loading-spinner" class="spinner-border pageLoader" role="status">
                 <span class="sr-only">Loading...</span>
             </div>-->
-            <form>
-              <div class="form-group">
-                <div class="input-group mb-3">
-                  <input class="form-control" id="pcntOff" placeholder="20" type="text" >
-                  <span class="input-group-text">% for </span>
-                  <select class="form-select" id="prodQty">
-                    <option selected>Choose...</option>
-                    <option value="1">1 or more </option>
-                    <option value="2">2 or more</option>
-                    <option value="3">3 or more</option>
-                    <option value="4">4 or more</option>
-                    <option value="5">5 or more</option>
-                    <option value="6">6 or more</option>
-                    <option value="7">7 or more</option>
-                    <option value="8">8 or more</option>
-                    <option value="9">9 or more</option>
-                    <option value="10">10 or more</option>
-                  </select>
+            <div id='form-container' class='card container'>
+              <form>
+                <div class="form-group">
+                  <div class="input-group mb-3">
+                    <input class="form-control" id="pcntOff" placeholder="20" type="text" >
+                    <span class="input-group-text">% for </span>
+                    <select class="form-select" id="prodQty">
+                      <option selected>Choose...</option>
+                      <option value="1">1 or more </option>
+                      <option value="2">2 or more</option>
+                      <option value="3">3 or more</option>
+                      <option value="4">4 or more</option>
+                      <option value="5">5 or more</option>
+                      <option value="6">6 or more</option>
+                      <option value="7">7 or more</option>
+                      <option value="8">8 or more</option>
+                      <option value="9">9 or more</option>
+                      <option value="10">10 or more</option>
+                    </select>
+                  </div>
                 </div>
-              </div>
-              <div class="form-group">
-                <label class="control-label" for="dateStart">From</label>
-                <input class="form-control" id="dateStart" name="date" placeholder="MM/DD/YYY" type="text"/>
-                <label class="control-label" for="dateEnd">To</label>
-                <input class="form-control" id="dateEnd" name="date" placeholder="MM/DD/YYY" type="text"/>
-              </div>
-              <div class="form-group">
-                <label class="control-label " for="discReason">
-                  Discount Reason
-                </label>
-                <input class="form-control" id="discReason" name="text" type="text"/>
-              </div>
-              <div class="form-group">
-                <div>
-                  <button class="btn btn-primary " name="submit" type="submit" onclick="testPrint()">
-                    Submit
-                  </button>
+                <div class="form-group">
+                  <label class="control-label" for="dateStart">From</label>
+                  <input class="form-control" id="dateStart" name="date" placeholder="MM/DD/YYY" type="text"/>
+                  <label class="control-label" for="dateEnd">To</label>
+                  <input class="form-control" id="dateEnd" name="date" placeholder="MM/DD/YYY" type="text"/>
                 </div>
-              </div>
-            </form>
+                <div class="form-group">
+                  <label class="control-label " for="discReason">
+                    Discount Reason
+                  </label>
+                  <input class="form-control" id="discReason" name="text" type="text"/>
+                </div>
+                <div class="form-group">
+                  <div>
+                    <button class="btn btn-primary " name="submit" type="submit" onclick="testPrint()">
+                      Submit
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
             <div id='products-container' class='card container'>
                 <!-- Content will be populated here -->
             </div>
