--- a/templates/portal.html
+++ b/templates/portal.html
@@ -40,7 +40,7 @@
             <div id='form-container' class='card container'>
               <form>
                 <div class="form-group">
-                  <div class="input-group mb-3">
+                  <div class="input-group mb-3" id="discount-amount-group">
                     <input class="form-control" id="pcntOff" placeholder="20" type="text" >
                     <span class="input-group-text">% for </span>
                     <select class="form-select" id="prodQty">
@@ -58,7 +58,7 @@
                     </select>
                   </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" id="discount-date-range-group">
                   <label class="control-label" for="dateStart">From</label>
                   <input class="form-control" id="dateStart" name="date" placeholder="MM/DD/YYY" type="text"/>
                   <label class="control-label" for="dateEnd">To</label>
