--- a/templates/portal.html
+++ b/templates/portal.html
@@ -34,6 +34,7 @@
 
     <div class="container-color d-flex w-100 h-100 mx-auto flex-column">
         <main role="main" class="container">
+          <h1> Bulk Discount </h1>
             <!--<div id="loading-spinner" class="spinner-border pageLoader" role="status">
                 <span class="sr-only">Loading...</span>
             </div>-->
