--- a/templates/portal.html
+++ b/templates/portal.html
@@ -39,7 +39,9 @@
                 <span class="sr-only">Loading...</span>
             </div>-->
             <div id='form-container' class='card container'>
-              <h3> Choose a discount </h3>
+              <h3> Create a discount </h3>
+              <p>Create a discount to apply to selected products.</p>
+              <br>
               <form>
                 <div class="form-group">
                   <div class="input-group mb-3" id="discount-amount-group">
@@ -68,9 +70,9 @@
                 </div>
                 <div class="form-group">
                   <label class="control-label " for="discReason">
-                    Discount Reason
+                    Discount Reason<br>
                   </label>
-                  <input class="form-control" id="discReason" name="text" type="text"/>
+                  <textarea rows="4" class="form-control" id="discReason" name="text" placeholder="Please give a reason for the discount."></textarea>
                 </div>
                 <div class="form-group">
                   <div>
