--- a/templates/portal.html
+++ b/templates/portal.html
@@ -63,9 +63,9 @@
                   </div>
                 </div>
                 <div class="form-group" id="discount-date-range-group">
-                  <label class="control-label" for="dateStart">From</label>
+                  <span class="control-label" for="dateStart">From</span>
                   <input class="form-control" id="dateStart" name="date" placeholder="MM/DD/YYY" type="text"/>
-                  <label class="control-label" for="dateEnd">To</label>
+                  <span class="control-label" for="dateEnd">To</span>
                   <input class="form-control" id="dateEnd" name="date" placeholder="MM/DD/YYY" type="text"/>
                 </div>
                 <div class="form-group">
