--- a/templates/portal.html
+++ b/templates/portal.html
@@ -40,7 +40,6 @@
             </div>-->
             <div id='form-container' class='card container'>
               <h3> Create a discount </h3>
-              <p>Create a discount to apply to selected products.</p>
               <br>
               <form>
                 <div class="form-group">
@@ -63,13 +62,13 @@
                   </div>
                 </div>
                 <div class="form-group" id="discount-date-range-group">
-                  <span class="control-label" for="dateStart">From</span>
+                  <span class="input-group-text" for="dateStart">From</span>
                   <input class="form-control" id="dateStart" name="date" placeholder="MM/DD/YYY" type="text"/>
-                  <span class="control-label" for="dateEnd">To</span>
+                  <span class="input-group-text" for="dateEnd">To</span>
                   <input class="form-control" id="dateEnd" name="date" placeholder="MM/DD/YYY" type="text"/>
                 </div>
                 <div class="form-group">
-                  <label class="control-label " for="discReason">
+                  <label class="input-group-text" for="discReason">
                     Discount Reason<br>
                   </label>
                   <textarea rows="4" class="form-control" id="discReason" name="text" placeholder="Please give a reason for the discount."></textarea>
