--- a/templates/portal.html
+++ b/templates/portal.html
@@ -39,8 +39,7 @@
                 <span class="sr-only">Loading...</span>
             </div>-->
             <div id='form-container' class='card container'>
-              <h3> Create a discount </h3>
-              <br>
+              <h3> Create a discount <br></h3>
               <form>
                 <div class="form-group">
                   <div class="input-group mb-3" id="discount-amount-group">
@@ -83,7 +82,7 @@
               </form>
             </div>
             <div id='products-container' class='card container'>
-              <h3> Select products to discount </h3>
+              <h3> Select products to discount <br></h3>
                 <!-- Content will be populated here -->
             </div>
         </main>
