--- a/templates/portal.html
+++ b/templates/portal.html
@@ -62,14 +62,15 @@
 
                         //TODO:
                         //Call intial form not products table
+                        const formElement = renderDiscountForm();
                         const productsElement = resPortal.products.length > 0 ?
-                            renderProductsTable(resPortal.products)
+                            (renderProductsTable(resPortal.products), $('#form-container').append(formElement))
                             :
                             renderNoProducts(resPortal.products);
                         ;
-                        const formElement = renderDiscountForm();
                         $('#products-container').append([productsElement]);
-                        $('#form-container').append(formElement);
+                        //$('#form-container').append(formElement);
+
                         //used for table row selecting
                         $('.table tr.product-row').click(function(event){
                           if (event.target.type !== 'checkbox') {
