--- a/templates/portal.html
+++ b/templates/portal.html
@@ -62,6 +62,9 @@
 
                         //TODO:
                         //Call intial form not products table
+                        //Only insert jquery for select table row if there are products
+                        //Validate discount form before submit goes through
+                        
                         const productsElement = resPortal.products.length > 0 ?
                             renderProductsTable(resPortal.products)
                             :
