--- a/templates/portal.html
+++ b/templates/portal.html
@@ -75,7 +75,7 @@
                   </div>
                   <div class="form-group">
                     <div>
-                      <button class="btn btn-primary " id="discount-form-submit" name="submit" type="submit" onclick="selectedDiscountSubmit()">
+                      <button class="btn btn-primary " id="discount-form-submit" name="submit" type="submit">
                         Submit
                       </button>
                     </div>
