--- a/templates/portal.html
+++ b/templates/portal.html
@@ -9,6 +9,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
     <!-- Custom styles -->
@@ -41,46 +42,6 @@
             <div id='form-container' class='card container'>
               <h3> Create a discount <br></h3>
                 <!-- Form will be populated here -->
-                <form>
-                  <div class="form-group">
-                    <div class="input-group mb-3" id="discount-amount-group">
-                      <input class="form-control" id="pcntOff" placeholder="20" type="text" >
-                      <span class="input-group-text">% for </span>
-                      <select class="form-select" id="prodQty">
-                        <option selected>Choose...</option>
-                        <option value="1">1 or more </option>
-                        <option value="2">2 or more</option>
-                        <option value="3">3 or more</option>
-                        <option value="4">4 or more</option>
-                        <option value="5">5 or more</option>
-                        <option value="6">6 or more</option>
-                        <option value="7">7 or more</option>
-                        <option value="8">8 or more</option>
-                        <option value="9">9 or more</option>
-                        <option value="10">10 or more</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="form-group" id="discount-date-range-group">
-                    <span class="input-group-text" for="dateStart">From</span>
-                    <input class="form-control" id="dateStart" name="date" placeholder="MM/DD/YYY" type="text"/>
-                    <span class="input-group-text" for="dateEnd">To</span>
-                    <input class="form-control" id="dateEnd" name="date" placeholder="MM/DD/YYY" type="text"/>
-                  </div>
-                  <div class="form-group">
-                    <label class="input-group-text" for="discReason">
-                      Discount Reason<br>
-                    </label>
-                    <textarea rows="4" class="form-control" id="discReason" name="text" placeholder="Please give a reason for the discount."></textarea>
-                  </div>
-                  <div class="form-group">
-                    <div>
-                      <button class="btn btn-primary " id="discount-form-submit" name="submit" type="submit">
-                        Submit
-                      </button>
-                    </div>
-                  </div>
-                </form>
             </div>
             <div id='products-container' class='card container'>
               <h3> Select products to discount <br></h3>
@@ -110,17 +71,17 @@
                             :
                             renderNoProducts(resPortal.products);
                         ;
-                        //const formElement = renderDiscountForm();
+                        const formElement = renderDiscountForm();
                         $('#products-container').append([productsElement]);
-                        //$('#form-container').append(formElement);
+                        $('#form-container').append(formElement);
 
                         //used for table row selecting
-                        /*$('.table tr.product-row').click(function(event){
+                        $('.table tr.product-row').click(function(event){
                           event.preventDefault();
                           if (event.target.type !== 'checkbox') {
                             $(':checkbox', this).trigger('click');
                           }
-                        });*/
+                        });
                     } else {
                         forceLogout(resPortal.error);
                     }
@@ -130,6 +91,5 @@
                 });
         });
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   </body>
 </html>
