--- a/templates/portal.html
+++ b/templates/portal.html
@@ -71,7 +71,7 @@
                             :
                             renderNoProducts(resPortal.products);
                         ;
-                        const formElement = renderDiscountForm();
+                        const formElement = renderSelectedDiscountForm();
                         $('#products-container').append([productsElement]);
                         $('#form-container').append(formElement);
 
