--- a/templates/portal.html
+++ b/templates/portal.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="/js/utils/common.js"></script>
     <script type="text/javascript" src="/js/utils/form.js"></script>
     <script type="text/javascript" src="/js/renders/portal.js"></script>
+    <script type="text/javascript" src="/js/renders/forms.js"></script>
 
   </head>
 
@@ -76,6 +77,18 @@
                         $('#form-container').append(formElement);
 
                         //used for table row selecting
+                        $(document).ready(function(){
+                          var date_input=$('input[name="date"]'); //our date input has the name "date"
+                          var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
+                          var options={
+                            format: 'mm/dd/yyyy',
+                            container: container,
+                            todayHighlight: true,
+                            autoclose: true,
+                          };
+                          date_input.datepicker(options);
+                        })
+
                         $('.table tr.product-row').click(function(event){
                           event.preventDefault();
                           if (event.target.type !== 'checkbox') {
