--- a/templates/portal.html
+++ b/templates/portal.html
@@ -80,7 +80,12 @@
                           var date_input=$('input[name="date"]'); //our date input has the name "date"
                           var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
                           var options={
-                            format: 'mm/dd/yyyy',
+                            format: {
+                              toDisplay: 'mm/dd/yyyy',
+                              toValue: function (date, format, language) {
+                                return date.toISOString();
+                              }    
+                            },
                             container: container,
                             todayHighlight: true,
                             autoclose: true,
