--- a/templates/portal.html
+++ b/templates/portal.html
@@ -80,7 +80,14 @@
                           var date_input=$('input[name="date"]'); //our date input has the name "date"
                           var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
                           var options={
-                            format: 'dd/mm/yyyy',
+                            format: {
+                              toDisplay: "dd/mm/yyyy"
+                              },
+                              toValue: function(date, format, language) {
+                                var d = new Date(date);
+                                return d.toISOString();
+                              }
+                            },
                             container: container,
                             todayHighlight: true,
                             autoclose: true,
