--- a/templates/portal.html
+++ b/templates/portal.html
@@ -81,9 +81,12 @@
                           var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
                           var options={
                             format: {
-                              toValue: function(date, format, language) {
+                              toDisplay: function(date, format, language) {
                                 var d = new Date(date);
                                 return d.toISOString();
+                              },
+                              toValue: function(date, format, language) {
+                                return new Date(date);
                               }
                             },
                             container: container,
