--- a/templates/portal.html
+++ b/templates/portal.html
@@ -90,8 +90,10 @@
                                 return "test";
                               }
                             },
+                            clearBtn: true,
                             container: container,
                             todayHighlight: true,
+                            minDate: new Date(),
                             autoclose: true,
                           };
                           date_input.datepicker(options);
