--- a/templates/portal.html
+++ b/templates/portal.html
@@ -91,6 +91,7 @@
                               }
                             },
                             minDate:new Date(),
+                            disabledDates: [new Date()],
                             clearBtn: true,
                             container: container,
                             todayHighlight: true,
