--- a/templates/portal.html
+++ b/templates/portal.html
@@ -90,12 +90,10 @@
                                 return "test";
                               }
                             },
-                            minDate:new Date(),
-                            disabledDates: [new Date()],
                             clearBtn: true,
                             container: container,
                             todayHighlight: true,
-                            autoclose: true,
+                            autoclose: true
                           };
                           date_input.datepicker(options);
                         })
