--- a/templates/portal.html
+++ b/templates/portal.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="/js/utils/common.js"></script>
     <script type="text/javascript" src="/js/renders/portal.js"></script>
     <script type="text/javascript" src="/js/renders/forms.js"></script>
-    <script type="text/javascript" src="/js/apis/forms.js"></script>
+    <script type="text/javascript" src="/js/apis/products.js"></script>
 
   </head>
 
