--- a/templates/portal.html
+++ b/templates/portal.html
@@ -45,6 +45,9 @@
                 <!-- Form will be populated here -->
             </div>
             <div id='products-container' class='card container'>
+              <div id="loading-spinner" class="spinner-border pageLoader" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
               <h3> Select products to discount <br></h3>
                 <!-- Content will be populated here -->
             </div>
