--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -284,3 +284,14 @@ input[type=text]:placeholder {
 #discount-date-range-group .form-control {
   width: auto;
 }
+
+.overlay{
+  position: absolute;
+  background: rgba(0,0,0,0.5);
+  width: 100%;
+  height: 100%;
+  color: #FFF;
+  z-index: 1000;
+  text-align: center;
+  visibility: hidden;
+}
