--- a/templates/portal.html
+++ b/templates/portal.html
@@ -82,7 +82,7 @@
                           var date_input=$('input[name="date"]'); //our date input has the name "date"
                           var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
                           var options={
-                            format: "YYYY-MM-DD",
+                            format: "yyyy-mm-dd",
                             clearBtn: true,
                             container: container,
                             todayHighlight: true,
