--- a/templates/portal.html
+++ b/templates/portal.html
@@ -34,18 +34,23 @@
       </button>
     </nav>
 
+<!--TODO handle loading and styling-->
     <div class="container-color d-flex w-100 h-100 mx-auto flex-column">
         <main role="main" class="container">
           <h1> Bulk Discount </h1>
-            <div id='form-container' class='card container'>
+            <div class='card container'>
+              <div id='form-container'>
                 <!-- Form will be populated here -->
+              </div>
             </div>
-            <div id='products-container' class='card container'>
+            <div class='card container'>
               <div id="loading-spinner" class="spinner-border pageLoader" role="status">
                 <span class="sr-only">Loading...</span>
               </div>
               <h3> Select products to discount <br></h3>
+              <div id='products-container'>
                 <!-- Content will be populated here -->
+              </div>
             </div>
         </main>
     </div>
