--- a/templates/portal.html
+++ b/templates/portal.html
@@ -39,6 +39,7 @@
         <main role="main" class="container">
           <h1> Bulk Discount </h1>
             <div class='card container'>
+              <h3> Create a discount <br></h3>
               <div id='form-container'>
                 <!-- Form will be populated here -->
               </div>
