--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -333,7 +333,7 @@ input[type=text]:placeholder {
 }
 
 #table-products thead {
-  background-color: #323a40;
+  background-color: #4e5961;
   color:#ffffff;
   border-radius: .25rem;
 }
