--- a/templates/portal.html
+++ b/templates/portal.html
@@ -37,7 +37,7 @@
 
     <div class="container-color d-flex w-100 h-100 mx-auto flex-column">
         <main role="main" class="container">
-          <h1> Bulk Discount </h1>
+          <h1> Bulk Discount Tool </h1>
             <div class='card container'>
               <h3> Create a discount <br></h3>
               <div id='form-container'>
