--- a/templates/portal.html
+++ b/templates/portal.html
@@ -89,6 +89,48 @@
                             autoclose: true
                           };
                           date_input.datepicker(options);
+
+                          var maxField = 10; //Input fields increment limitation
+                          var addButton = $('.add_button'); //Add button selector
+                          var wrapper = $('#discount-amount-group'); //Input field wrapper
+                          //New input field html
+
+                          var x = 1; //Initial field counter is 1
+                          //Once add button is clicked
+                          $(addButton).click(function(){
+                              //Check maximum number of input fields
+                                console.log(x);
+                                  const fieldHTML = `
+                                  <div class="input-group mb-3">
+                                    <input class="form-control" id="pcntOff${x}" placeholder="20" type="text" >
+                                        <span class="input-group-text">% for </span>
+                                        <select class="form-select" id="prodQty${x}">
+                                          <option selected>Choose...</option>
+                                          <option value="1">1 or more </option>
+                                          <option value="2">2 or more</option>
+                                          <option value="3">3 or more</option>
+                                          <option value="4">4 or more</option>
+                                          <option value="5">5 or more</option>
+                                          <option value="6">6 or more</option>
+                                          <option value="7">7 or more</option>
+                                          <option value="8">8 or more</option>
+                                          <option value="9">9 or more</option>
+                                          <option value="10">10 or more</option>
+                                        </select>
+                                        <p class="remove_button">-</p>
+                                      </div>`;
+                              if(x < maxField){
+                                  x++; //Increment field counter
+                                  $(wrapper).append(fieldHTML); //Add field html
+                              }
+                          });
+
+                          //Once remove button is clicked
+                          $(wrapper).on('click', '.remove_button', function(e){
+                              e.preventDefault();
+                              $(this).parent('div').remove(); //Remove field html
+                              x--; //Decrement field counter
+                          });
                         })
 
                         $('.table tr.product-row').click(function(event){
